@@ -7,6 +7,7 @@ Changes:
 Fixes:
 * radCor caused R to crash if bandSet was a single band 
 * fix single RasterLayer capability for superClass
+* spectralIndices now calculates *all* documented indices if specified to do so (@mej1d1, #6)
 
 RStoolbox 0.1.4
 =====================================
